--- a/demo/index.html
+++ b/demo/index.html
@@ -19,6 +19,12 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <style>
+    html,
+    body {
+      height: 100%;
+      width: 100%;
+    }
+
     body {
       background: #fff;
       color: #000;
@@ -67,19 +73,54 @@
         text-align: center;
       }
     }
+
+    .skip-menu a {
+      left: 50%;
+      transform: translate(-50%, 0);
+      background-color: #0070d1;
+      border-radius: 0;
+      box-shadow: 0px 0px 18px -1px rgb(0 0 0 / 32%);
+      color: #fff;
+      display: block;
+      padding: 1rem;
+      position: absolute;
+      text-align: center;
+      top: -7rem;
+      transition: top .3s ease-in-out;
+      z-index: 999999;
+    }
+
+    .skip-menu a:focus {
+      background-color: #0070d1;
+      color: #fff;
+      outline-color: #0070d1;
+      top: 4px;
+    }
+
+    table tbody tr td:nth-child(1) {
+      font-family: monospace;
+      font-size: 1rem;
+    }
   </style>
 </head>
 
 <body>
-  <header>
+  <nav aria-label="Skip links" class="skip-menu">
+    <a class="site-skip" href="#main-content">Skip to content</a>
+  </nav>
+
+  <header class="container">
     <h1>Optimize image on the client side</h1>
   </header>
-  <main>
 
+  <main class="container" id="main-content">
     <div class="mb-4">
       <label for="files_input">Select images</label>
       <input type="file" id="files_input" multiple />
     </div>
+
+    <p class="alert alert-warning">Note that images that are larger in size after compression are not taken into
+      account.</p>
 
     <table id="results" class="table mb-4 caption-top">
       <caption class="visually-hidden">Results</caption>
@@ -94,68 +135,68 @@
     </table>
   </main>
 
-  <footer>© 2023 <a href="https://www.sitelint.com/">Sitelint</a></footer>
+  <footer class="container">© 2023 <a href="https://www.sitelint.com/">Sitelint</a></footer>
 
-    <script>
-      (function () {
-        const head = document.head;
+  <script>
+    (function () {
+      const head = document.head;
 
-        const loadOptimizeImagePackage = () => {
-          const script = document.createElement('script');
+      const loadOptimizeImagePackage = () => {
+        const script = document.createElement('script');
 
-          script.src = 'optimize-image-on-the-client-side.js?c=' + new Date().getTime();
-          script.type = 'text/javascript';
-          script.async = true;
+        script.src = 'optimize-image-on-the-client-side.js?c=' + new Date().getTime();
+        script.type = 'text/javascript';
+        script.async = true;
 
-          script.onload = () => {
-            const optimizeImage = new globalThis.sitelint.OptimizeImage();
-            const onCompressionDone = (filesBeforeCompression, filesAfterCompression) => {
-              const results = document.querySelector('#results tbody');
-              const beforeCompression = Array.from(filesBeforeCompression);
-              const afterCompression = Array.from(filesAfterCompression);
+        script.onload = () => {
+          const optimizeImage = new globalThis.sitelint.OptimizeImage();
+          const onCompressionDone = (filesBeforeCompression, filesAfterCompression) => {
+            const results = document.querySelector('#results tbody');
+            const beforeCompression = Array.from(filesBeforeCompression);
+            const afterCompression = Array.from(filesAfterCompression);
 
-              for (const index in beforeCompression) {
-                results.insertAdjacentHTML('beforeend', `<tr><td><code>${beforeCompression[index].name}</code></td><td>${beforeCompression[index].size}</td><td>${afterCompression[index].size}</td></tr>`);
-              }
-            };
-
-            optimizeImage.install(undefined, onCompressionDone);
+            beforeCompression.forEach((imageItem, index) => {
+              results.insertAdjacentHTML('beforeend', `<tr class="${afterCompression[index].size < beforeCompression[index].size ? 'alert alert-success' : 'alert alert-light'}"><td>${beforeCompression[index].name}</td><td>${beforeCompression[index].size}</td><td>${afterCompression[index].size}</td></tr>`);
+            });
           };
 
-          head.insertBefore(script, head.firstChild);
+          optimizeImage.install(undefined, onCompressionDone);
         };
 
-        if (typeof document.readyState === 'string' && document.readyState === 'complete') {
-          loadOptimizeImagePackage();
-        } else {
-          document.addEventListener('DOMContentLoaded', loadOptimizeImagePackage, true);
-        }
+        head.insertBefore(script, head.firstChild);
+      };
 
-        // Google Analytics
-        const loadGTM = () => {
-          const gtmScript = document.createElement('script');
+      if (typeof document.readyState === 'string' && document.readyState === 'complete') {
+        loadOptimizeImagePackage();
+      } else {
+        document.addEventListener('DOMContentLoaded', loadOptimizeImagePackage, true);
+      }
 
-          gtmScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-JTTSY0KNFH';
-          gtmScript.type = 'text/javascript';
-          gtmScript.async = true;
+      // Google Analytics
+      const loadGTM = () => {
+        const gtmScript = document.createElement('script');
 
-          gtmScript.onload = () => {
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
-            gtag('config', 'G-JTTSY0KNFH');
-          };
+        gtmScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-JTTSY0KNFH';
+        gtmScript.type = 'text/javascript';
+        gtmScript.async = true;
 
-          head.insertBefore(gtmScript, head.firstChild);
+        gtmScript.onload = () => {
+          window.dataLayer = window.dataLayer || [];
+          function gtag() { dataLayer.push(arguments); }
+          gtag('js', new Date());
+          gtag('config', 'G-JTTSY0KNFH');
         };
 
-        let url = new URL(window.location.href);
+        head.insertBefore(gtmScript, head.firstChild);
+      };
 
-        if (url.protocol !== 'file:') {
-          loadGTM();
-        }
-      }())
-    </script>
+      let url = new URL(window.location.href);
+
+      if (url.protocol !== 'file:') {
+        loadGTM();
+      }
+    }())
+  </script>
 </body>
 
 </html>
